* Package ref fixes
