# OpenAPI/Generated/src/HCore.Identity.Generated/Models/ApiException.cs
@@ -1,7 +1,7 @@
 /*
- * RHCore Identity Auth API
+ * HCore Identity Auth API
  *
- * The RHCore Identity Auth API provides the most common methods to handle authentication server side using ASP.NET Identity Core.
+ * The HCore Identity Auth API provides the most common methods to handle authentication server side using ASP.NET Identity Core.
  *
  * OpenAPI spec version: 1.0.0-s2
  * Contact: holzner@invest-fit.at
@@ -17,7 +17,7 @@ using System.ComponentModel.DataAnnotations.Schema;
 using System.Runtime.Serialization;
 using Newtonsoft.Json;
 
-namespace ReinhardHolzner.Core.Identity.Generated.Models
+namespace HCore.Identity.Generated.Models
 { 
     /// <summary>
     /// If the API call returns HTTP status codes indicating errors, the response body will contain an *ApiException* object providing more information about the error that occured
